# core

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  HEADER_USAGE_ANALYSIS.md  README.md  RELEASE.md  STYLE.md  cliff.toml  deny.toml  example.cpp  flake.nix  spec.md  standards.md
.github/: dependabot.yml
.github/workflows/: ci.yml  deltachat-rpc-server.yml  dependabot.yml  dev-version.yml  jsonrpc-client-npm-package.yml  jsonrpc.yml  nix.yml  publish-deltachat-rpc-client-pypi.yml  repl.yml  upload-docs.yml  upload-ffi-docs.yml  zizmor-scan.yml
benches/: benchmark_decrypting.rs  decrypting.rs  encrypt_decrypt.rs
deltachat-contact-tools/: Cargo.toml
deltachat-contact-tools/src/: lib.rs  vcard.rs
deltachat-ffi/: Cargo.toml  deltachat.h
deltachat-ffi/src/: lib.rs  lot.rs  string.rs
deltachat-jsonrpc/: Cargo.toml  README.md
deltachat-jsonrpc-bindings/: Cargo.toml  build.rs
deltachat-jsonrpc-bindings/qt/deltachat-jsonrpc/: cffi_client.hpp
deltachat-jsonrpc-bindings/typescript/: package.json
deltachat-jsonrpc-bindings/typescript/src/: client.ts
deltachat-jsonrpc-bindings/typescript/test/: online.ts
deltachat-jsonrpc/qt/: transport.hpp
deltachat-jsonrpc/src/: api.rs  lib.rs
deltachat-jsonrpc/typescript/: Readme.md  package.json
deltachat-ratelimit/: Cargo.toml
deltachat-repl/: Cargo.toml
deltachat-repl/src/: cmdline.rs  main.rs
deltachat-rpc-client/: README.md  pyproject.toml  tox.ini
deltachat-rpc-client/examples/: README_SEND.md  SEND_API_ANALYSIS.md  echobot_no_hooks.py  send.py
deltachat-rpc-client/tests/: conftest.py  test_calls.py  test_chatlist_events.py  test_cross_core.py  test_folders.py  test_iroh_webxdc.py  test_location.py  test_multidevice.py  test_multitransport.py  test_rpc_fifo.py  test_rpc_unix.py  test_rpc_virtual.py  test_securejoin.py  test_something.py  test_vcard.py  test_webxdc.py
deltachat-rpc-server/: Cargo.toml  README.md
deltachat-rpc-server/npm-package/: README.md  index.d.ts  index.js  package.json
deltachat-rpc-server/src/: main.rs
deltachat-time/: Cargo.toml
deltachat-time/src/: lib.rs
deltachat_derive/: Cargo.toml
deltachat_derive/src/: lib.rs
format-flowed/: Cargo.toml
format-flowed/src/: lib.rs
fuzz/: Cargo.toml
nix/: android-package.nix  c-docs.nix  cross-rust-package.nix  deltachat-rpc-client.nix  libdeltachat.nix  python-docs.nix  shell.nix  wheel.nix  win32-package.nix  win64-package.nix
python/: pyproject.toml  tox.ini
python/examples/: test_examples.py
python/tests/: test_0_complex_or_slow.py  test_1_online.py  test_3_offline.py  test_4_lowlevel.py
scripts/: README.md  check-dev-version.py  clippy.sh  create-provider-data-rs.py  deny.sh  remote_tests_python.sh  remote_tests_rust.sh  run_all.sh  set_core_version.py  update-provider-database.sh  wheel-rpc-server.py
scripts/coredeps/: install-rust.sh
src/: accounts.rs  aheader.rs  authres.rs  automatic_relay_management.rs  automatic_transport_management.rs  benchmark_internals.rs  blob.rs  calls.rs  chat.rs  chatlist.rs  color.rs  config.rs  configure.rs  constants.rs  contact.rs  context.rs  debug_logging.rs  decrypt.rs  dehtml.rs  download.rs  e2ee.rs  ephemeral.rs  events.rs  headerdef.rs  html.rs  imap.rs  imex.rs  internals_for_benches.rs  internals_for_benchmarks.rs  key.rs  lib.rs  location.rs  log.rs  login_param.rs  message.rs  mimefactory.rs  mimeparser.rs  net.rs  oauth2.rs  param.rs  (+32 more)
src/automatic_relay_management/: automatic_relay_management_tests.rs
src/automatic_transport_management/: automatic_transport_management_tests.rs
src/blob/: blob_tests.rs
src/calls/: calls_tests.rs
src/chat/: chat_tests.rs
src/config/: config_tests.rs
src/configure/: auto_mozilla.rs  auto_outlook.rs  server_params.rs
src/contact/: contact_tests.rs
src/context/: context_tests.rs
src/download/: post_msg_metadata.rs  pre_msg_metadata.rs
src/ephemeral/: ephemeral_tests.rs
src/events/: chatlist_events.rs  payload.rs
src/imap/: capabilities.rs  client.rs  idle.rs  imap_tests.rs  scan_folders.rs  select_folder.rs  session.rs
src/imex/: key_transfer.rs  transfer.rs
src/log/: logging_stream.rs  stream.rs
src/message/: message_tests.rs
src/mimefactory/: mimefactory_tests.rs
src/mimeparser/: mimeparser_tests.rs  security_tests.rs  shared_secret_decryption_tests.rs
src/net/: dns.rs  error_capturing_stream.rs  http.rs  proxy.rs  session.rs  tls.rs
src/pgp/: autocrypt2.rs
src/provider/: data.rs
src/qr/: dclogin_scheme.rs  qr_tests.rs
src/receive_imf/: receive_imf_tests.rs
src/scheduler/: connectivity.rs
src/securejoin/: bob.rs  qrinvite.rs  securejoin_tests.rs
src/self_reporting/: self_reporting_tests.rs
src/smtp/: chunking_tests.rs  connect.rs  send.rs
src/sql/: migrations.rs  pool.rs  sql_tests.rs
src/statistics/: statistics_tests.rs
src/stats/: stats_tests.rs
src/stock_str/: stock_str_tests.rs
src/tests/: aeap.rs  pre_messages.rs  verified_chats.rs
src/tools/: tools_tests.rs
src/transport/: transport_tests.rs
src/webxdc/: integration.rs  maps_integration.rs  webxdc_tests.rs
test-data/: core-1.86.0-backup.tar
test-data/golden/: chat_test_parallel_member_remove  receive_imf_delayed_removal_is_ignored  receive_imf_older_message_from_2nd_device  test_broadcast_joining_golden_alice  test_broadcast_joining_golden_alice_direct  test_broadcast_joining_golden_bob  test_broadcast_joining_golden_private_chat  test_old_message_1  test_old_message_4  test_old_message_5  test_outgoing_encrypted_msg  test_outgoing_mua_msg  test_outgoing_mua_msg_pgp  test_sync_broadcast_alice  test_sync_broadcast_alice1  test_sync_broadcast_alice2  test_sync_broadcast_bob  two_group_securejoins  verified_chats_editor_reordering  verified_chats_message_from_old_dc_setup
test-data/key/: pqc-secret.asc
test-data/message/: alice_to_bob_no_intended_recipient_fingerprint.eml  calendar-alternative.eml  ctext_unsigned.asc  encrypted-group-without-id.eml  encrypted-signed.eml  hp_legacy_display.eml  image_4k.eml  image_huge_36M.eml  image_huge_64M.eml  jpeg-as-application-octet-stream.eml  (+8 more)
(+53 files in other folders)
