[package]
name = "deltachat-jsonrpc-bindings"
version = "2.51.0"
edition = "2024"

[dependencies]

[build-dependencies]
deltachat = { workspace = true, default-features = false }
deltachat-jsonrpc = { workspace = true }

[features]
default = ["vendored"]
vendored = ["deltachat/vendored", "deltachat-jsonrpc/vendored"]
